--- a/templates/indextest.html
+++ b/templates/indextest.html
@@ -17,13 +17,13 @@
   <div class="table">
     <div class="row header">
       <div class="cell">
-        Name
+        Usuario
       </div>
       <div class="cell">
-        Age
+        Pelicula
       </div>
       <div class="cell">
-        Occupation
+        Similitud Euclidiana
       </div>
 <!--      <div class="cell">-->
 <!--        Location-->
@@ -37,13 +37,13 @@
   <div class="table">
     <div class="row header">
       <div class="cell">
-        Name
+        Usuario
       </div>
       <div class="cell">
-        Age
+        Pelicula
       </div>
       <div class="cell">
-        Occupation
+        Similitud Manhatan
       </div>
 <!--      <div class="cell">-->
 <!--        Location-->
@@ -60,13 +60,13 @@
       <div class="table">
     <div class="row header blue">
       <div class="cell">
-        Name
+        Usuario
       </div>
       <div class="cell">
-        Age
+        Pelicula
       </div>
       <div class="cell">
-        Occupation
+        Similitud Pearson
       </div>
 <!--      <div class="cell">-->
 <!--        Location-->
@@ -80,13 +80,13 @@
       <div class="table">
     <div class="row header green">
       <div class="cell">
-        Name
+        Usuario
       </div>
       <div class="cell">
-        Age
+        Pelicula
       </div>
       <div class="cell">
-        Occupation
+        Similitud Coseno
       </div>
 <!--      <div class="cell">-->
 <!--        Location-->
